--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,13 @@
 {
-  "name": "swag/plugin-skeleton",
-  "description": "Skeleton plugin",
+  "name": "event-candy/candy-bags",
+  "description": "CandyBags plugin",
   "type": "shopware-platform-plugin",
   "license": "MIT",
+  "version": "1.0.0",
+  "require": {
+    "shopware/core": ">=6.3.4.1",
+    "event-candy/sets-plugin": ">=v1.0.0"
+  },
   "autoload": {
     "psr-4": {
       "EventCandyCandyBags\\": "src/"
@@ -10,9 +15,10 @@
   },
   "extra": {
     "shopware-plugin-class": "EventCandyCandyBags\\EventCandyCandyBags",
+    "plugin-icon": "src/Resources/config/plugin.png",
     "label": {
-      "de-DE": "Skeleton plugin",
-      "en-GB": "Skeleton plugin"
+      "de-DE": "EventCandy CandyBags",
+      "en-GB": "EventCandy CandyBags"
     }
   }
 }
