--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 REMOTE=164.90.166.117
 USER=root
+LOCALUSER=pawelsnatenkov
 PLUGINPATH=/var/www/html/custom/plugins/EventCandyCandyBags
 PLUGINNAME=EventCandyCandyBags
 BINPATH=/var/www/html
