fix api error, add new ApiAware Flag

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     }
   ],
   "require": {
-    "shopware/core": ">=6.3.4.1"
+    "shopware/core": ">=6.3.4.1",
+    "event-candy/sets-plugin": ">=v1.0.2"
   },
   "autoload": {
     "psr-4": {
