--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ LOCALUSER=pawelsnatenkov
 PLUGINPATH=/var/www/html/custom/plugins/EventCandyCandyBags
 PLUGINNAME=EventCandyCandyBags
 BINPATH=/var/www/html
+
+# for ./cs_build_js_and_commit.sh
+SWVERSION=6.4.5.0
