--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REMOTE=164.90.166.117
+REMOTE=123.123.123.123
 USER=root
-LOCALUSER=pawelsnatenkov
+LOCALUSER=some-user
 PLUGINPATH=/var/www/html/custom/plugins/EventCandyCandyBags
 PLUGINNAME=EventCandyCandyBags
 BINPATH=/var/www/html
